classDiagram
    class WeatherApiClient {
        - String TARGET_URL
        +fetchWeatherData()
    }

    class WeatherDataParser {
        +parseWeatherData(String jsonData)
    }

    class WeatherForecastApp {
        + main(String[] args)
    }

    WeatherForecastApp --> WeatherApiClient
    WeatherForecastApp --> WeatherDataParser